Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 19.01.2022 08:33:49</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 19.01.2022 09:12:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 19. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Mrkvovo-celerová</strong>
+<strong>Vývar se zeleninou a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Tilapie s paprikový coulis a vařeným bramborem</strong>
+<strong>Jelení plec na víně se špeclemi NEBO rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelín s hranolkami a tatarkou</strong>
+<strong>Míchaný salát se šunkou, sýrem, vejcem a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							127,-
 						</span>
 </p>
 <p>
@@ -169,7 +169,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska kulata ryze s rybimi filety {hejk, makrela, treska}, pecenou zeleninou a rajcaty, salatek 139</li><li>Peceny filet z cerstveho halibuta a prazmy s citronem a omackou aiolli, pecene brambory, salatek 169</li><li>Grilovany veprovy kebab suvlaki v recke citronove marinade ve chlebove placce, jogurtove tzatziki, recky cizrnovy salat se zeleninou a  cernymi olivami {L} 139</li><li>Italske houbove rizoto s bazantimi stehynky, lanyzovym olejem a parmezanem 169</li><li>Brokolicove birjany z basmati ryze se zeleninou, sazene vejce, jogurtove tzatziki, salatek 139</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, stouhane brambory s cibulkou a creme fraiche, salatek z cervene repy s krenem {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou a creme fraiche, salatek z cervene repy s krenem 169</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 139</li><li>Spagety s nudlickami srnci kyty, brokolici, chilli a petrzelkovym pestem se susenymi rajcaty {L} 169</li><li>Lasagne s uzenym tofu, rajcaty, cockou a lilky zapecene ve smetanove omacce, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
