--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 20.01.2022 08:34:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 20.01.2022 09:12:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, stouhane brambory s cibulkou a creme fraiche, salatek z cervene repy s krenem {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s cibulkou a creme fraiche, salatek z cervene repy s krenem 169</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 139</li><li>Spagety s nudlickami srnci kyty, brokolici, chilli a petrzelkovym pestem se susenymi rajcaty {L} 169</li><li>Lasagne s uzenym tofu, rajcaty, cockou a lilky zapecene ve smetanove omacce, salatek {L} 139</li></ol>
+<ol><li>Bengalska korma s kousky rybich filetu {makrela, hejk, pstruh}, kokosovym mlekem, kvetakem a panc phoron, jasminova ryze 139</li><li>Peceny filet z cerstve krevetove ryby {uhor congrio} se salsou z cerstvych rajcat a okurek, pecene brambory, salatek 169</li><li>Korejske restovane veprove nudlicky s gochujang, sezamem a cesnekem, ryzove nudle, zeleninove cukemono se zazvorem 139</li><li>Peruanske anticuchos – grilovane marinovane hovezi srdce, sriracha majoneza, pecene brambory, salatek 159</li><li>Zapecena cuketa plnena barbecue tempehem s paprikami a cibulkou, pilaf z kulate ryze s pecenou zeleninou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
