--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 21.01.2022 08:33:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 21.01.2022 09:12:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,14 +7,14 @@
 <h5>Pátek, 21. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Bramborová s mrkví</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Špagety s kuřecím masem, pestem a parmazánem</strong>
+<strong>Frankfurtská Vepřová plec s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -174,7 +174,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Bengalska korma s kousky rybich filetu {makrela, hejk, pstruh}, kokosovym mlekem, kvetakem, lilky a panc phoron, jasminova ryze 139</li><li>Peceny filet z cerstve krevetove ryby {uhor congrio} se salsou z cerstvych rajcat a okurek, pecene brambory, salatek 169</li><li>Korejske restovane veprove nudlicky s gochujang, sezamem a cesnekem, ryzove nudle, zeleninove cukemono se zazvorem 139</li><li>Peruanske anticuchos – grilovane marinovane hovezi srdce, sriracha majoneza, pecene brambory, salatek 159</li><li>Zapecena cuketa plnena barbecue tempehem s paprikami a cibulkou, pilaf z kulate ryze s pecenou zeleninou, salatek 139</li></ol>
+<ol><li>Peceny filet z jihoceskeho kapra s thajskym chilli dzemem, smazena zeleninova ryze, salatek 139</li><li>Smazena jasminova ryze s restovanymi kalamary a zeleninou, thajsky chilli dzem, salatek 169</li><li>Lasagne s hovezim masem, rajcaty a cerstvymi bylinkami zapecena ve smetanove omacce s goudou salatek {L} 139</li><li>Burrito se srncimi a muflonimi nudlickami, rajcetem a ledovym salatem, okurkove tzatziki, pecene brambory, salatek {L} 169</li><li>Indicky dal z cervene cocky s rajcaty a bylinkami, sazene vejce, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
