Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 24.01.2022 08:37:39</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 24.01.2022 09:12:17</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -129,7 +129,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z jihoceskeho kapra s thajskym chilli dzemem, smazena zeleninova ryze, salatek 139</li><li>Smazena jasminova ryze s restovanymi kalamary a zeleninou, thajsky chilli dzem, salatek 169</li><li>Lasagne s hovezim masem, rajcaty a cerstvymi bylinkami zapecena ve smetanove omacce s goudou salatek {L} 139</li><li>Burrito se srncimi a muflonimi nudlickami, rajcetem a ledovym salatem, okurkove tzatziki, pecene brambory, salatek {L} 169</li><li>Indicky dal z cervene cocky s rajcaty a bylinkami, sazene vejce, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho mecouna s pecenymi rajcaty a ancovickovym dresinkem, zeleninovy kuskus, salatek {L} 175</li><li>Grilovane veprove ribsy v palive a vonave vindalu marinade, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s merunkovym catny, gratinovane brambory, salatek 169</li><li>Burrito s mexickym fazolovym chilli s pecenymi paprikami a chipotle paprickami, pecene brambory, jogurtovy dip, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
