Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 25.01.2022 08:33:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 25.01.2022 09:12:28</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 25.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, borůvkami a drobenkou</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka s uzeným masem- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka s uzeným masem- v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>300g Lasagne bolognese, omáčka z pečených rajčat, rukola, bazalkové pesto <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí steak v provensálském koření, sýrová omáčka, máslová tarhoňa s petrželí, cherry rajče <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Ragú z hlívy ústřičné, smetanová omáčka, kořenová zelenina, basmati rýže <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -104,7 +139,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho mecouna s pecenymi rajcaty a ancovickovym dresinkem, zeleninovy kuskus, salatek {L} 175</li><li>Grilovane veprove ribsy v palive a vonave vindalu marinade, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s merunkovym catny, gratinovane brambory, salatek 169</li><li>Burrito s mexickym fazolovym chilli s pecenymi paprikami a chipotle paprickami, pecene brambory, jogurtovy dip, salatek {L} 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s citronem a kaparovym maslem, bramborovy salat s bilou redkvi, cibulkou a creme fraiche 139</li><li>Spagety s chobotnici, sekanym humrem, pak coj a bylinkovym pestem s cesnekem {L} 175</li><li>Thajske kari s nudlickami krutich prsou, kvetakem, dyni, arasidy a kokosovym mlekem, jasminova ryze 139</li><li>Smazene rizecky z panenske svickove a danci kyty, bramborovy salat s  bilou redkvi, cibulkou a creme fraiche, citron {L} 169</li><li>Pecena maslova dyne a papriky zapecene s camembertem, zeleninovy kuskus, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
