Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 26.01.2022 08:33:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 26.01.2022 09:12:13</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -104,7 +104,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s citronem a kaparovym maslem, bramborovy salat s bilou redkvi, cibulkou a creme fraiche 139</li><li>Spagety s chobotnici, sekanym humrem, pak coj a bylinkovym pestem s cesnekem {L} 175</li><li>Thajske kari s nudlickami krutich prsou, kvetakem, dyni, arasidy a kokosovym mlekem, jasminova ryze 139</li><li>Smazene rizecky z panenske svickove a danci kyty, bramborovy salat s  bilou redkvi, cibulkou a creme fraiche, citron {L} 169</li><li>Pecena maslova dyne a papriky zapecene s camembertem, zeleninovy kuskus, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, kapr, uzeny losos} se stredomorskym citronovym dresinkem, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139</li><li>Peceny filet z cerstve tresky se stredomorskym citronovym dresinkem, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Kubanske trhane veprove na pomerancich, pikantni fazole s paprikami, jasminova ryze, salatek 139</li><li>Wrap s hovezim pastrami, rajcetem a pekingskym zelim, krenova majoneza, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty a toppingem z pikantnich varenych vajec, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
