Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 27.01.2022 07:12:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 27.01.2022 07:42:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -101,7 +101,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, kapr, uzeny losos} se stredomorskym citronovym dresinkem, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139</li><li>Peceny filet z cerstve tresky se stredomorskym citronovym dresinkem, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Kubanske trhane veprove na pomerancich, pikantni fazole s paprikami, jasminova ryze, salatek 139</li><li>Wrap s hovezim pastrami, rajcetem a pekingskym zelim, krenova majoneza, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty a toppingem z pikantnich varenych vajec, jasminova ryze 139</li></ol>
+<ol><li>Peceny filet z norskeho slede s jablecno-rajcatovou salsou, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstveho jihoceskeho candata s jablecno-rajcatovou salsou, pohanka s pecenou zeleninou, salatek 175</li><li>Pad kra pao – kruti kousky s thajskou bazalkou, fazolovymi lusky, chilli a sazenym vejcem, jasminova ryze, salatek 139</li><li>Grilovane danci a kanci medailonky s houbovou omackou s lanyzovym olejem, bramborove placky, salatek 175</li><li>Burrito s pecenymi lilky, paprikami a syrem halloumi, cervena cocka s cizrnou. salatek 139</li></ol>
 </td>
 </tr>
 </table>
