Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 31.01.2022 08:34:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 31.01.2022 09:12:27</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -128,7 +128,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho pstruha s citronovym pak coj a morskymi rasami, korenena ryze s beluga cockou, salatek 139</li><li>Smazeny filet z cerstve bile tresky s kaparovou majonezou, stouchane brambory s cibulkou, salatek {L} 169</li><li>Kasmirsky pikantni hovezi rogan josh s rajcaty, vonavym korenim, zazvorem a lzici jogurtu, jasminova ryze, salatek 139</li><li>Grilovane medailonky z krutich prsou s cibulovo-limetkovym dzemem, gratinovane brambory, salatek 169</li><li>Maghrebska zapecena rajcatova saksuka s vejcem a balkanskym syrem, korenena ryze s beluga cockou, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a omackou z pecenych paprik, teply cizrnovy salat se zeleninou a beluga cockou 139</li><li>Peceny filet z cerstve prazmy kralovske s citronem a omackou z pecenych paprik, teply cizrnovy salat se zeleninou a beluga cockou 175</li><li>Pomalu pecene indoneske veprove s arasidovou omackou, jasminova ryze, salatek 139</li><li>Grilovana koroptvi prsicka s thajskym chilli dzemem, pecene brambory, pomerancovy salat s cervenou cibuli 169</li><li>Pecene papriky plnene fazolovym chilli, pecene brambory, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
